feat: add currency USD in the message
